--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-minreq = { version = "2.8.1", features = ["native-tls", "json-using-serde"] }
+minreq = { version = "2.8.1", features = ["punycode", "json-using-serde", "https-native"] }
+serde = { version = "1.0.163", features = ["derive"] }
+serde_json = { default-features = false, version = "1.0.96" }
+uuid = { version = "1.4.1", features = ["serde"] }
