--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "rs-keycloak"
-version = "0.1.1"
+version = "0.2.0"
 edition = "2021"
 
 authors = ["Cosmo André"]
 description = "Faça a autenticação dos seus projetos usando Keycloak"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/cosmo9able/rs-keycloak"
-keywords = ["async-graphql", "auth", "login", "keycloak"]
+keywords = ["async-graphql", "auth", "login", "keycloak", "apis", "rest", "graphql"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
