--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ authors = ["Cosmo André"]
 description = "Faça a autenticação dos seus projetos usando Keycloak"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/cosmo9able/rs-keycloak"
-keywords = ["async-graphql", "auth", "login", "keycloak", "apis", "rest", "graphql"]
+keywords = ["auth", "login", "keycloak", "rest", "graphql"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
